fix readability font-size and font-weight

--- a/src/main/resources/static/styles/components.css
+++ b/src/main/resources/static/styles/components.css
@@ -7,7 +7,7 @@
     box-shadow: 0 2px 10px #8C69F4;
     border-radius: 8px;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
     display: flex;
     align-items: center;
@@ -45,7 +45,7 @@
     background-color: #E9E4FA;
     border-radius: 8px;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
     display: flex;
     align-items: center;
