--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -50,7 +50,7 @@
     margin-top: 25px;
     font-style: normal;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 22px;
     text-align: justify;
 }
