--- a/src/main/resources/static/styles/match/match.css
+++ b/src/main/resources/static/styles/match/match.css
@@ -35,7 +35,7 @@
 .tournamentDate {
     font-style: normal;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
 }
 
@@ -64,7 +64,7 @@
 .teamName {
     font-style: normal;
     font-weight: 800;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
 }
 
@@ -119,7 +119,7 @@
 .setText {
     font-style: normal;
     font-weight: 400;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 144%;
     white-space: nowrap;
     margin: 0 15px;
@@ -145,14 +145,14 @@
 .courtText {
     font-style: italic;
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
 }
 
 .bestOfText {
     font-style: normal;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 14pxm;
     line-height: 24px;
     margin: 15px 0px;
 }
@@ -193,7 +193,7 @@
 .stateText {
     font-style: normal;
     font-weight: 400;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 24px;
     color: #FFFAFA;
 }
