--- a/src/main/resources/static/styles/team/listTeam.css
+++ b/src/main/resources/static/styles/team/listTeam.css
@@ -89,9 +89,10 @@
 
 .partTitle {
     font-weight: bold;
+    font-size: 20px;
 }
 .partSubtitle {
-    letter-spacing: 2px;
+    font-size: 18px;
 }
 ul.roundsList {
     list-style: none;
@@ -100,12 +101,13 @@ ul.roundsList {
     display: flex;
     justify-content: left;
     flex-direction: row;
+    font-size : 16px;
 }
 .imgBracket {
     object-fit: cover;
 }
 .teamCard {
-    width: 246px;
+    width: fit-content;
     background-color: #F4F4F8;
     box-sizing: border-box;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.25);
@@ -186,7 +188,7 @@ ul.roundsList {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     text-align: justify;
 }
