--- a/src/main/resources/static/styles/tournament/view.css
+++ b/src/main/resources/static/styles/tournament/view.css
@@ -31,9 +31,10 @@ p{
 }
 .partTitle {
     font-weight: bold;
+    font-size: 20px;
 }
 .partSubtitle {
-    letter-spacing: 2px;
+    font-size: 18px;
 }
 ul.roundsList {
     list-style: none;
@@ -42,12 +43,13 @@ ul.roundsList {
     display: flex;
     justify-content: left;
     flex-direction: row;
+    font-size : 16px;
 }
 .imgBracket {
     object-fit: cover;
 }
 .teamCard {
-    width: 246px;
+    width: fit-content;
     background-color: #F4F4F8;
     box-sizing: border-box;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.25);
@@ -99,6 +101,7 @@ ul.roundsList {
 }
 .teamMember {
     margin: 3px;
+    font-size: 14px;
 }
 .statusCircleGreen {
     height: 15px;
